--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/localstoragedb.js"></script>
 </head>
 <body ng-controller="KeyEventController" ng-keyup="keypressed($event)">
 <!--<p>Keypress: {{ getKeyCode() }}</p>-->
