Refactored practice controller.

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 <body ng-controller="KeyEventController" ng-keyup="keypressed($event)">
 <!--<p>Keypress: {{ getKeyCode() }}</p>-->
 <ul class="nav nav-tabs nav-justified" role="tablist" ng-controller="NavBarController">
-    <li ng-class="{ active: isActive('/')}"><a href="#/card"><span class="glyphicon glyphicon-home"></span></a></li>
+    <li ng-class="{ active: isActive('/practice')}"><a href="#/card"><span class="glyphicon glyphicon-home"></span></a></li>
     <li ng-class="{ active: isActive('/edit-cards')}"><a href="#/edit-cards"><span class="glyphicon glyphicon-edit"></span></a></li>
     <li ng-class="{ active: isActive('/import-export-cards')}"><a href="#/import-export-cards"><span class="glyphicon glyphicon-floppy-disk"></span></a></li>
     <li ng-class="{ active: isActive('/config')}"><a href="#/config"><span class="glyphicon glyphicon-cog"></span></a></li>
