--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,8 @@
     <li ng-class="{ active: isActive('/practice')}"><a href="#/card"><span class="glyphicon glyphicon-home"></span></a></li>
     <li ng-class="{ active: isActive('/edit-cards')}"><a href="#/edit-cards"><span class="glyphicon glyphicon-edit"></span></a></li>
     <li ng-class="{ active: isActive('/import-export-cards')}"><a href="#/import-export-cards"><span class="glyphicon glyphicon-floppy-disk"></span></a></li>
-    <li ng-class="{ active: isActive('/config')}"><a href="#/config"><span class="glyphicon glyphicon-cog"></span></a></li>
-    <li ng-class="{ active: isActive('/todo')}"><a href="#/todo"><span class="glyphicon glyphicon-th-list"></span></a></li>
+    <!--<li ng-class="{ active: isActive('/config')}"><a href="#/config"><span class="glyphicon glyphicon-cog"></span></a></li>-->
+    <!--<li ng-class="{ active: isActive('/todo')}"><a href="#/todo"><span class="glyphicon glyphicon-th-list"></span></a></li>-->
 </ul>
 
 <!--[if lt IE 7]>
