Improved layout of practice view.

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     <script src="js/jquery-1.11.1.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
@@ -30,6 +31,7 @@
 </head>
 <body ng-controller="KeyEventController" ng-keyup="keypressed($event)">
 <!--<p>Keypress: {{ getKeyCode() }}</p>-->
+<!-- <div class="container-fluid">     -->
 <div class="col-md-4"></div>
 <div class="col-md-4">
     <ul class="nav nav-tabs nav-justified" role="tablist" ng-controller="NavBarController">
@@ -54,7 +56,7 @@
     </div>
 </div>
 <div class="col-md-4"></div>
-
+<!-- </div> -->
 <!--<div>Angular seed app: v<span app-version></span></div>-->
 
 <!-- In production use:
