--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,7 @@
 <!--<p>Keypress: {{ getKeyCode() }}</p>-->
 <!-- <div class="container-fluid">     -->
 <div class="col-md-3 col-lg-4"></div>
-<div class="col-md-6 col-lg-4">
-    <div class="col-lg-2"></div>
-    <div class="col-lg-10">
+<div class="col-xs-12 col-md-6 col-lg-4">
     <ul class="nav nav-tabs nav-justified" role="tablist" ng-controller="NavBarController">
         <li ng-class="{ active: isActive('/practice')}"><a href="#/card"><span class="glyphicon glyphicon-home"></span></a>
         </li>
@@ -56,8 +54,8 @@
     <div class="main-content">
         <div ng-view></div>
     </div>
-</div>
-    <div class="col-lg-2"></div>
+
+
 </div>
 <div class="col-md-3 col-lg-4"></div>
 <!-- </div> -->
